parent option and restructure

--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -94,6 +94,13 @@ family:
                 source: sro
                 grib: true
                 decumulate: true 
+    ifs-control:
+        parent: ifs-default
+        method: merge
+        vars:
+            tprate:
+                source: tprate
+
 
 
 models:
@@ -364,22 +371,22 @@ models:
                     tprate:
                         source: tprate
 
-        control-1950-nemo-dev:
-            hourly-1deg:
-                method: merge
-                vars:
-                    tprate:
-                        source: tprate
-            hourly-native:
-                method: merge
-                vars:
-                    tprate:
-                        source: tprate
-            monthly-1deg-2d:
-                method: merge
-                vars:
-                    tprate:
-                        source: tprate
+        # control-1950-nemo-dev:
+        #     hourly-1deg:
+        #         method: merge
+        #         vars:
+        #             tprate:
+        #                 source: tprate
+        #     hourly-native:
+        #         method: merge
+        #         vars:
+        #             tprate:
+        #                 source: tprate
+        #     monthly-1deg-2d:
+        #         method: merge
+        #         vars:
+        #             tprate:
+        #                 source: tprate
 
         historical-1990-fesom-dev:
             hourly-1deg:
