--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -15,6 +15,7 @@ sources:
   short_masked:
     metadata:
       source_grid_name: tco79-testmask
+      fix_family: ifs-ci-test
     args:
       chunks:
         time: 1
@@ -25,14 +26,14 @@ sources:
   short_nn:
     metadata:
       source_grid_name: tco79-nn
+      fix_family: ifs-ci-test-two
     args:
       chunks:
         time: 1
       urlpath:
       - ./AQUA_tests/models/IFS/short/IFS2d.tco79.nc
     description: original 2d output
-    driver: netcdf
-  
+    driver: netcdf 
   long:
     metadata:
       source_grid_name: lon-lat
