--- a/config/machines/ci/catalog/FESOM/test-pi.yaml
+++ b/config/machines/ci/catalog/FESOM/test-pi.yaml
@@ -13,7 +13,7 @@ sources:
   original_2d:
     metadata:
       source_grid_name: test-pi-2d
-      fix_family: fesom-default
+      fix_names: fesom-default
     args:
       chunks:
         time: 1
@@ -29,7 +29,7 @@ sources:
   original_2d_fix:
     metadata:
       source_grid_name: test-pi-2d
-      fix_family: fesom-test
+      fix_names: fesom-test
     args:
       chunks:
         time: 1
