--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -15,7 +15,7 @@ sources:
   short_masked:
     metadata:
       source_grid_name: tco79-testmask
-      fix_family: ifs-ci-test
+      fix_names: ifs-ci-test
     args:
       chunks:
         time: 1
@@ -32,7 +32,7 @@ sources:
       urlpath:
       - ./AQUA_tests/models/IFS/short/IFS2d.tco79.nc
     description: original 2d output
-    driver: netcdf 
+    driver: netcdf
   long:
     metadata:
       source_grid_name: lon-lat
