--- a/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
+++ b/config/machines/levante/catalog/IFS/tco2559-ng5-cycle3.yaml
@@ -7,7 +7,7 @@ sources:
     driver: zarr
     metadata:
       source_grid_name: tco2559
-      fix_family: ifs-default
+      fix_names: ifs-default
     args:
       consolidated: false
       urlpath:
@@ -26,7 +26,7 @@ sources:
     driver: zarr
     metadata:
       source_grid_name: multio-r025
-      fix_family: ifs-cycle3
+      fix_names: ifs-cycle3
     args:
       consolidated: false
       urlpath:
