--- a/config/machines/lumi/catalog/IFS/historical-1990-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/historical-1990-nemo-dev.yaml
@@ -27,7 +27,7 @@ sources:
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tprate', '2t', '10u', '10v', '100u', '100v', 'sr', 'blh', '2d', 'skt', 'sp']
       source_grid_name: tco1279
-      fix_family: ifs-control
+      fix_names: ifs-control
   hourly-1deg:
     args:
       request:
@@ -57,7 +57,7 @@ sources:
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tprate', 'sf', '2t', '10u', '10v', 'blh', 'sshf', 'slhf', 'ssrd', 'ssr', 'strd', 'str', 'ttr', 'e', 'tsr', 'ewss', 'nsss', 'sro']
       source_grid_name: lon-lat
-      fix_family: ifs-control
+      fix_names: ifs-control
   6hourly-1deg:
     args:
       request:
@@ -114,7 +114,7 @@ sources:
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['tprate', '2t', 'tcc', 'sd', 'tciw', 'tclw', 'msl', 'tcwv', 'lcc', 'mcc', 'hcc']
       source_grid_name: lon-lat
-      fix_family: ifs-control
+      fix_names: ifs-control
   monthly-1deg-3d:
     args:
       request:
