--- a/config/machines/lumi/catalog.yaml
+++ b/config/machines/lumi/catalog.yaml
@@ -16,6 +16,11 @@ sources:
     driver: yaml_file_cat
     args:
         path: "{{CATALOG_DIR}}/catalog/IFS/main.yaml"
+  IFS-NEMO:
+    description: IFS-NEMO coupled model
+    driver: yaml_file_cat
+    args:
+        path: "{{CATALOG_DIR}}/catalog/IFS-NEMO/main.yaml"
   FESOM:
     description: FESOM oceanic model
     driver: yaml_file_cat
