--- a/config/machines/lumi/catalog/IFS-NEMO/main.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/main.yaml
@@ -9,7 +9,7 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/historical-1990-dev.yaml'
-  spinup-fracice:
+  spinup-1990-fracice:
     description: "1990-1991 coupled spinup (2y) with fractional sea ice coupling"
     driver: yaml_file_cat
     args:
