--- a/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
@@ -54,7 +54,7 @@ sources:
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
       source_grid_name: tco1279
       variables: [60, 132, 157, 130, 133, 131, 129, 135]
-  oce-monthly-1deg-2d:
+  oce-monthly-healpix-2d:
     args:
       request:
         domain: g
@@ -81,7 +81,7 @@ sources:
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
       source_grid_name: nemo-healpix
       variables: [263101, 263001, 263122, 263121, 263100]
-  oce-monthly-1deg-3d:
+  oce-monthly-healpix-3d:
     args:
       request:
         domain: g
