The 'resos' is renamed into 'resolutions; 'exp' into 'experiments'.

--- a/cli/weights/config/weights_config.yml
+++ b/cli/weights/config/weights_config.yml
@@ -1,7 +1,7 @@
 data:
-  model:  []
-  exp:    []
-  source: []
-  resos: ['r025', 'r100']
+  models:  []
+  experiments:    []
+  sources: []
+  resolutions: ['r025', 'r100']
 full_catalogue: False
 loglevel: 'DEBUG'
