The 'Zoom_max' variable is added to the script.

--- a/cli/weights/config/weights_config.yml
+++ b/cli/weights/config/weights_config.yml
@@ -3,7 +3,9 @@ data:
   experiments:    []
   sources: []
   resolutions: ['r025', 'r100']
+  zoom_max: 10
 full_catalogue: False
+
 
 loglevel: 'DEBUG'
 nproc: 4
