The 'rebuild' flag is added to the script.

--- a/cli/weights/config/weights_config.yml
+++ b/cli/weights/config/weights_config.yml
@@ -4,8 +4,8 @@ data:
   sources: []
   resolutions: ['r025', 'r100']
   zoom_max: 10
+rebuild: True
 full_catalogue: False
-
 
 loglevel: 'DEBUG'
 nproc: 4
