--- a/diagnostics/radiation/cli/config/radiation_config.yml
+++ b/diagnostics/radiation/cli/config/radiation_config.yml
@@ -10,7 +10,7 @@ data:
   source_era5: "monthly"
 
 diagnostic_attributes:
-  bar_plot: True
+  box_plot: True
   bias_maps: True
   gregory: True
   time_series: True
@@ -18,4 +18,4 @@ diagnostic_attributes:
 loglevel: 'warning'
 
 path:
-  path_to_output: "/work/bb1153/b382267/AQUA/diagnostics/radiation/cli/config/"
+  path_to_output: "/work/bb1153/b382257/AQUA/diagnostics/radiation/cli/config/"
