--- a/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
@@ -1,5 +1,5 @@
 sources:
-  monthly-1deg-2d:
+  monthly-healpix-2d:
     args:
       request:
         domain: g
@@ -24,9 +24,9 @@ sources:
       fdb_path: /scratch/project_465000454/iwagner/a0ef/config.yaml
       eccodes_path: 
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
-      source_grid_name: tco1279
+      source_grid_name: ifs-healpix
       variables: [186,228004,151,235055,187,137,78,164,141,188,79]
-  monthly-1deg-3d:
+  monthly-healpix-3d:
     args:
       request:
         domain: g
@@ -52,7 +52,7 @@ sources:
       fdb_path: /scratch/project_465000454/iwagner/a0ef/config.yaml
       eccodes_path: 
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
-      source_grid_name: tco1279
+      source_grid_name: ifs-healpix
       variables: [60, 132, 157, 130, 133, 131, 129, 135]
   oce-monthly-healpix-2d:
     args:
