--- a/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/spinup-1990-fracice.yaml
@@ -25,7 +25,7 @@ sources:
       eccodes_path: 
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
       source_grid_name: ifs-healpix
-      variables: [186,228004,151,235055,187,137,78,164,141,188,79]
+      variables: [186, 228004, 151, 235055, 187, 137, 78, 164, 141, 188, 79]
   monthly-healpix-3d:
     args:
       request:
@@ -39,7 +39,8 @@ sources:
         param: 187
         levtype: pl
         step: 0
-        levelist: [1,5,10,20,30,50,70,100,150,200,250,300,400,500,600,700,850,925,1000]
+        levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
+          700, 850, 925, 1000]
       data_start_date: '19900101'
       data_end_date: '19911231'
       aggregation: M
@@ -94,14 +95,11 @@ sources:
         param: 187
         levtype: o3d
         step: 0
-        levelist: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10,
-                  11, 12, 13, 14, 15, 16, 17, 18, 19, 20,
-                  21, 22, 23, 24, 25, 26, 27, 28, 29, 30,
-                  31, 32, 33, 34, 35, 36, 37, 38, 39, 40,
-                  41, 42, 43, 44, 45, 46, 47, 48, 49, 50,
-                  51, 52, 53, 54, 55, 56, 57, 58, 59, 60,
-                  61, 62, 63, 64, 65, 66, 67, 68, 69, 70,
-                  71, 72, 73, 74, 75]
+        levelist: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18,
+          19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36,
+          37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54,
+          55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72,
+          73, 74, 75]
       data_start_date: '19900101'
       data_end_date: '19911231'
       aggregation: M
@@ -116,3 +114,14 @@ sources:
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
       source_grid_name: nemo-healpix
       variables: [263500, 263501, 263505, 263506, 263507]
+  lra-r100-monthly:
+    driver: netcdf
+    description: LRA data monthly at r100
+    args:
+      urlpath: 
+        /pfs/lustrep3/projappl/project_465000454/padavini/LRA/IFS-NEMO/spinup-1990-fracice/r100/monthly/*spinup-1990-fracice_r100_monthly_*.nc
+      chunks: {}
+      xarray_kwargs:
+        decode_times: true
+    metadata:
+      source_grid_name: lon-lat
