--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -77,6 +77,7 @@ grids:
     cellarea_var: cell_area
   ifs-healpix:
     space_coord: ["ncells"]
+    vert_coord: ["2d"]
     path: $grids/HealPix/ifs_hpx10.nc
 
   #ICON
