--- a/config/machines/lumi/catalog/IFS-NEMO/main.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/main.yaml
@@ -9,6 +9,11 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/historical-1990-dev.yaml'
+  historical-1990-dev-lowres:
+    description: FDB IFS/NEMO tco79-eORCA1 historical 1990 run (lowres)
+    driver: yaml_file_cat
+    args:
+      path: '{{CATALOG_DIR}}/historical-1990-dev-lowres.yaml'
   spinup-1990-fracice:
     description: "1990-1991 coupled spinup (2y) with fractional sea ice coupling"
     driver: yaml_file_cat
