--- a/config/machines/lumi/catalog/IFS/control-1950-nemo-dev.yaml
+++ b/config/machines/lumi/catalog/IFS/control-1950-nemo-dev.yaml
@@ -84,6 +84,7 @@ sources:
     metadata:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
       variables: ['z']
       source_grid_name: lon-lat
   monthly-1deg-2d:
@@ -142,6 +143,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/pool/data/EXPERIMENTS/fdb-config-CONTROL_1950_DEVCON.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.30.0/definitions
       variables: ['u', 'v', 't', 'r', 'q']
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600, 700, 850, 925, 1000]
       source_grid_name: lon-lat
   lra-r100-monthly:
     driver: netcdf
