--- a/cli/weights/config/weights_config.yml
+++ b/cli/weights/config/weights_config.yml
@@ -1,21 +1,21 @@
 data:
-  models: ['MSWEP']     # List of models to be used
-  experiments: ['past'] # List of experiments
-  sources: [monthly]    # Data sources, e.g., 'monthly'
-  resolutions: ['r025'] # Spatial resolutions, e.g., 'r025'
-  zoom_max: 1           # Maximum zoom level
+  models: []            # List of models to be used
+  experiments: []       # List of experiments
+  sources: []           # Data sources, e.g., 'monthly'
+  resolutions: ['r025', 'r100'] # Spatial resolutions
+  zoom_max: 10          # Maximum zoom level
 
 rebuild: False          # Flag to indicate whether to rebuild data
 catalogue: False        # Flag to use the entire catalogue or not
-loglevel: 'DEBUG'       # Logging level
+loglevel: 'WARNING'     # Logging level
 
 compute_resources:
   resubmit: False       # Whether to automatically resubmit the job
   run_on_sunday: False  # Whether the job should run only on Sundays
   nproc: 4              # Number of processors to use
   nodes: 1              # Number of nodes required
-  walltime: '01:00:00'  # Maximum time allowed for the job
-  memory: '20G'         # Memory allocation for the job
+  walltime: '08:00:00'  # Maximum time allowed for the job
+  memory: '200G'        # Memory allocation for the job
   lumi_version: 23.03   # Version of LUMI to be used
   account:              # Account details for different machines
     lumi: 'project_465000454'
