Sea ice extent V2 with uncertainty and seasonal cycle

--- a/diagnostics/seaice/cli/config.yml
+++ b/diagnostics/seaice/cli/config.yml
@@ -6,19 +6,31 @@ models:
     regrid: null
     variable: ci
     timespan: ['2020-01-20', '2024-12-31']
+  - model: ICON
+    exp: ngc3028
+    source: "lra-r100-monthly"
+    regrid: null
+    variable: ci
+    timespan: ['2020-01-20', '2024-12-31']
+  - model: IFS
+    exp: tco2559-ng5-cycle3
+    source: 2D_monthly_0.25deg
+    regrid: null
+    variable: ci
+    timespan: ['2020-01-20', '2024-12-31']
   # These are observational datasets
   - model: OSI-SAF
     exp: osi-450
     source: nh-monthly
     regrid: null
     variable: ci
-    timespan: ['2018-01-01', '2020-12-31']
+    timespan: ['1979-01-01', '2015-12-31']
   - model: OSI-SAF
     exp: osi-450
     source: sh-monthly
     regrid: null
     variable: ci
-    timespan: ['2018-01-01', '2020-12-31']
+    timespan: ['1979-01-01', '2015-12-31']
 
 regions: # If this block is missing all regions will be evaluated
   - Arctic
