MSWEP default fix trial

--- a/config/fixes/MSWEP.yaml
+++ b/config/fixes/MSWEP.yaml
@@ -1,3 +1,14 @@
+fixer_name:  
+    MSWEP-default:
+        data_model: cf
+        vars:
+            # Automatic conversion to destination grib units
+            tprate:
+                source: precipitation
+                grib: true
+
+
+
 models:  
     MSWEP:
         default:
