--- a/.github/workflows/aqua.yml
+++ b/.github/workflows/aqua.yml
@@ -46,9 +46,9 @@ jobs:
       # To run FDB tests we need to use a Docker image with FDB installed.
       image: ghcr.io/destine-climate-dt/fdb:5.11.10-ubuntu
       credentials:
-        username: oloapinivad
+        username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-      #options: --user root
+      options: --user root
     permissions:
       contents: read
       issues: write
