--- a/config/fixes/GPM.yaml
+++ b/config/fixes/GPM.yaml
@@ -1,10 +1,9 @@
-models:  
-    GPM:
+fixer_name:  
+    GPM-default:
         imerg:
-            default:
-                data_model: cf
-                vars:
-                    # Automatic conversion to destination grib units
-                    tprate:
-                        source: precipitationCal
-                        grib: true
+            data_model: cf
+            vars:
+                # Automatic conversion to destination grib units
+                tprate:
+                    source: precipitationCal
+                    grib: true
