--- a/config/fixes/OSI-SAF.yaml
+++ b/config/fixes/OSI-SAF.yaml
@@ -1,10 +1,9 @@
-models:  
-    OSI-SAF:
+fixer_name:  
+    OSI-SAF-default:
         osi-450:
-            default:
-                data_model: false  # Do not attempt to fix coordinates
-                vars:
-                    # Automatic conversion to destination grib units
-                    var262001:  # siconc
-                        source: ice_conc
-                        grib: true
+            data_model: false  # Do not attempt to fix coordinates
+            vars:
+                # Automatic conversion to destination grib units
+                var262001:  # siconc
+                    source: ice_conc
+                    grib: true
