--- a/.github/workflows/create-container-from-tag.yaml
+++ b/.github/workflows/create-container-from-tag.yaml
@@ -8,7 +8,8 @@ on:
   #     - v*
 
 env:
-  IMAGE_NAME: aqua
+  IMAGE_NAME_AQUA: aqua-test
+  IMAGE_NAME_FDB: ubuntu22.04-fdb-aqua
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,11 +21,11 @@ jobs:
         uses: actions/checkout@v4
       - name: "Log in to registry"
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }}  --password-stdin
-      - name: "build container"
-        run: docker build --file dockerfiles/Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}" .
-      - name: "publish container"
+      - name: "build fdb container"
+        run: docker build --file dockerfiles/Dockerfile.ubuntu --tag $IMAGE_NAME_FDB --label "runnumber=${GITHUB_RUN_ID}" .
+      - name: "publish fdb container"
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME_FDB
           IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
@@ -32,5 +33,19 @@ jobs:
           [ "$VERSION" == "main" ] && VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker tag $IMAGE_NAME_FDB $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+      - name: "build aqua container"
+        run: docker build --file dockerfiles/Dockerfile --tag $IMAGE_NAME_AQUA --label "runnumber=${GITHUB_RUN_ID}" .
+      - name: "publish aqua container"
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME_AQUA
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          [ "$VERSION" == "main" ] && VERSION=latest
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker tag $IMAGE_NAME_AQUA $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
