--- a/.github/workflows/create-container-from-tag.yaml
+++ b/.github/workflows/create-container-from-tag.yaml
@@ -3,7 +3,7 @@ name: "Container build and publish"
 on:
   # release:
   #   types: [published]
-  workflow-dispatch:
+  workflow_dispatch:
   # push: # We remove this to create the container only when we create a release from browser (issue #490)
   #   tags:
   #     - v*
