--- a/.github/workflows/create-container-from-tag.yaml
+++ b/.github/workflows/create-container-from-tag.yaml
@@ -1,9 +1,8 @@
 name: "Container build and publish"
 
-on:
+on: workflow_dispatch
   # release:
   #   types: [published]
-  workflow_dispatch:
   # push: # We remove this to create the container only when we create a release from browser (issue #490)
   #   tags:
   #     - v*
