--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -185,6 +185,41 @@ sources:
       variables: [78, 79, 134, 137, 141, 148, 151, 159, 164, 165, 166, 167, 168, 186, 187, 188, 235, 260048, 8, 9, 144, 146, 147, 169, 175, 176, 177, 178, 179, 180, 181, 182, 212, 228]
       source_grid_name: lon-lat
       fixer_name: ifs-control
+  daily-r025-o2d:
+    args:
+      request:
+        #domain: g
+        class: d1
+        dataset: climate-dt
+        activity: CMIP6
+        experiment: hist
+        generation: 1
+        model: IFS-NEMO
+        realization: 1
+        resolution: standard
+        expver: a0h3
+        type: fc
+        stream: clte
+        date: 19900101
+        time: "0000"
+        param: 263000
+        levtype: o2d
+        step: 0
+      data_start_date: 19900101
+      data_end_date: 19941231
+      aggregation: M  # Default aggregation / chunk size
+      savefreq: D  # at what frequency are data saved
+      timestyle: date  # variable date or variable step
+    description: hourly data on native grid TCo1279 (about 10km). Contains tprate(260048),
+      2t(167), 10u(165), 10v(166), 100u(228246), 100v(228247), sr(173), blh(159),
+      2d(168), skt(235), sp(134). See fix yaml for derived vars.
+    driver: gsv
+    metadata:
+      fdb_path: /project/project_465000454/experiments/a0h3/fdb/REGULARLL_grids/etc/fdb/config.yaml
+      eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.2/definitions
+      variables:  [263000, 263001, 263003, 263004, 263008, 263009, 263021, 263022, 263100, 263101, 263121, 263122, 263124]
+      source_grid_name: lon-lat
+      fixer_name: ifs-control
 
 
 # Example request:
