--- a/config/machines/ci/catalog/IFS/test-tco79.yaml
+++ b/config/machines/ci/catalog/IFS/test-tco79.yaml
@@ -17,7 +17,7 @@ sources:
     <<: *short-default
     metadata:
       <<: *metadata-default
-      source_grid_name: tco79-test
+      source_grid_name: tco79-nn
   short_masked:
     metadata:
       source_grid_name: tco79-testmask
