--- a/.github/workflows/create-container-from-tag.yaml
+++ b/.github/workflows/create-container-from-tag.yaml
@@ -1,11 +1,11 @@
 name: "Container build and publish"
 
 on: 
-  push:
-    branches: [ devel/ubuntu-docker ]
-  # workflow_dispatch
-  # release:
-  #   types: [published]
+  # push:
+  #   branches: [ devel/ubuntu-docker ]
+  # # workflow_dispatch
+  release:
+    types: [published]
   # push: # We remove this to create the container only when we create a release from browser (issue #490)
   #   tags:
   #     - v*
