--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -1,4 +1,77 @@
 fixer_name:
+    ifs-destine-v1:
+        data_model: ifs
+        deltat: 3600
+        vars:
+            tprate:
+                source: tp
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            cprate:
+                source: cp
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mlsprt:
+                source: lsp
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            erate:
+                source: e
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            esrate:
+                source: es
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mrort:
+                source: ro
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mtsfr:
+                source: sf
+                grib: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mslhfl:
+                source: slhf
+                grib: true
+            msshfl:
+                source: sshf
+                grib: true
+            msnsrf:
+                source: ssr
+                grib: true
+            msdsrf:
+                source: ssrd
+                grib: true
+            msntrf:
+                source: str
+                grib: true
+            msdtrf:
+                source: strd
+                grib: true
+            mtnsrf:
+                source: tsr
+                grib: true
+            mtntrf:
+                source: ttr
+                grib: true      
+            iews:
+                source: ewss
+                grib: true
+            inss: 
+                source: nsss
+                grib: true
+            surfror:  # a very recent version of eccodes is needed for this one
+                source: sro
+                grib: true
+                decumulate: true 
     ifs-default:
         data_model: ifs
         deltat: 3600
