all atm sources added to historical-1990 IFS-NEMO

--- a/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-NEMO/historical-1990.yaml
@@ -62,6 +62,26 @@ sources:
       <<: *metadata-default
       fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
       source_grid_name: ifs-healpix
+    
+  hourly-hpxstd-atm3d:
+    <<: *base-default
+    description: hourly 3D atmospheric data on healpix grid (zoom=7, h128).
+    args:
+      <<: *args-default
+      aggregation: 6H
+      request:
+        <<: *request-default
+        resolution: standard
+        param: 131
+        levtype: pl
+        levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
+          700, 850, 925, 1000]
+    metadata:
+      <<: *metadata-default
+      fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
+      source_grid_name: ifs-healpix
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
+      variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
   hourly-hpxhigh-atm2d:
     <<: *base-default
@@ -75,6 +95,26 @@ sources:
       <<: *metadata-default
       fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
       source_grid_name: ifs-healpix
+
+  hourly-hpxhigh-atm3d:
+    <<: *base-default
+    description: hourly 3D atmospheric data on healpix grid (zoom=10, h1024).
+    args:
+      <<: *args-default
+      aggregation: 6H
+      request:
+        <<: *request-default
+        resolution: high
+        param: 131
+        levtype: pl
+        levelist: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,
+          700, 850, 925, 1000]
+    metadata:
+      <<: *metadata-default
+      fdb_path: /project/project_465000454/experiments/a0h3/fdb/HEALPIX_grids/etc/fdb/config.yaml
+      source_grid_name: ifs-healpix
+      levels: [1, 5, 10, 20, 30, 50, 70, 100, 150, 200, 250, 300, 400, 500, 600,700, 850, 925, 1000]
+      variables: [60, 129, 130, 131, 132, 133, 135, 157, 246]
 
   hourly-r025-atm2d:
     <<: *base-default
