hpx for standard and highres

--- a/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
+++ b/config/machines/lumi/catalog/IFS-FESOM/historical-1990.yaml
@@ -109,7 +109,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/HEALPIX_grids/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.2/definitions
       variables: [78, 79, 134, 137, 141, 148, 151, 159, 164, 165, 166, 167, 168, 186, 187, 188, 235, 260048, 8, 9, 144, 146, 147, 169, 175, 176, 177, 178, 179, 180, 181, 182, 212, 228]
-      source_grid_name: tco1279
+      source_grid_name: hpz7-nested
       fixer_name: ifs-control
 
   hourly-hpxhigh:
@@ -146,7 +146,7 @@ sources:
       fdb_path: /pfs/lustrep3/scratch/project_465000454/sbeyer/production_fdb_tco1279_historic/HEALPIX_grids/etc/fdb/config.yaml
       eccodes_path: /projappl/project_465000454/jvonhar/aqua/eccodes/eccodes-2.32.2/definitions
       variables: [78, 79, 134, 137, 141, 148, 151, 159, 164, 165, 166, 167, 168, 186, 187, 188, 235, 260048, 8, 9, 144, 146, 147, 169, 175, 176, 177, 178, 179, 180, 181, 182, 212, 228]
-      source_grid_name: ifs-healpix
+      source_grid_name: hpz10-nested
       fixer_name: ifs-control
 
   hourly-r025:
