--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -37,6 +37,14 @@ grids:
     space_coord: ["ncells"]
     vert_coord: ["2d"]
     path: $grids/HealPix/hpz10_nested_atm.nc
+  hpz7-ring:
+    space_coord: ["ncells"]
+    vert_coord: ["2d"]
+    path: $grids/HealPix/hpz7_ring_atm.nc
+  hpz10-ring:
+    space_coord: ["ncells"]
+    vert_coord: ["2d"]
+    path: $grids/HealPix/hpz10_ring_atm.nc
 
   #IFS
   tco79:
